welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: ';' expected but 'return' found.
		} return false
                  ^SnakeBuggle:17: error: ';' expected but 'return' found.
		} return false
                  ^